Pujada de la practica 3

--- a/index.html
+++ b/index.html
@@ -1,56 +1,71 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Adrià de la Fuente">
-    <meta name="keywords" content="Myke Towers Fnas">
-    <link href="./img/iconoweb.png" rel="icon">
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/necolas/normalize.css/master/normalize.css%22%3E%3E">
-    <link rel="stylesheet" type="text/css" href="./css/common.css">
-    <link rel="stylesheet" type="text/css" href="./css/index.css">
-    <meta name="description" content="M4">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Adrià de la Fuente" />
+    <meta name="keywords" content="Myke Towers Fnas" />
+    <link href="./img/iconoweb.png" rel="icon" />
+    
+    <link
+      rel="stylesheet"
+      href="https://raw.githubusercontent.com/necolas/normalize.css/master/normalize.css%22%3E%3E"
+    />
+    <link rel="stylesheet" type="text/css" href="./css/common.css" />
+    <link rel="stylesheet" type="text/css" href="./css/index.css" />
+    
+    <meta name="description" content="M4" />
     <title>Club de fans de Myke Towers</title>
-</head>
-
-<body>
+  </head>
+  <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="./index.html">Inicio</a></li>
-                <li><a href="./web/general.html">General</a></li>
-                <li><a href="./web/fotos.html">Fotos</a></li>
-                <li><a href="./web/videos.html">Vídeos</a></li>
-                <li><a href="./web/agenda.html">Agenda</a></li>
-                <li><a href="./web/contacte.html">Contacto</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <ul>
+          <li><a href="./index.html">Inicio</a></li>
+          <li><a href="./web/general.html">General</a></li>
+          <li><a href="./web/fotos.html">Fotos</a></li>
+          <li><a href="./web/videos.html">Vídeos</a></li>
+          <li><a href="./web/agenda.html">Agenda</a></li>
+          <li><a href="./web/contacte.html">Contacto</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
-        <aside class="col-md-5 col-xl-5">
-            <img class="col-12 col-xl-10" src="./img/myketowers.png" alt="Myke Towers">
-        </aside>
-        <article class="col-md-7 col-xl-7">
-            <h2>ULTIMAS NOTÍCIAS</h2>
-            <p>Myke Towers es un cantante latinoamericano que sacará un álbum el mes que viene.
-                El 24 de enero de 2020, publicó su álbum de estudio debut titulado Easy Money Baby, en honor a su hijo
-                Shawn Torres, que alcanzó el puesto 1 en Top Latin Albums durante 83 semanas consecutivas. El
-                álbum fue nominado para los Grammy Latinos en la categoría de Mejor álbum de música urbana. Con su
-                participación con Wisin en Los Legendarios 001 en la canción «Mi niña», logró el primer lugar en la
-                lista Latin Airplay de Billboard,[cita requerida] a su vez, certificación Platino por la RIAA,[cita
-                requerida] y posteriormente, colaboraron para la remezcla junto a Anitta y Maluma.</p>
-        </article>
+      <aside class="col-md-5 col-xl-5">
+        <img
+          class="col-12 col-xl-10"
+          src="./img/myketowers.png"
+          alt="Myke Towers"
+        />
+      </aside>
+      <article class="col-md-7 col-xl-7">
+        <h2>ULTIMAS NOTÍCIAS</h2>
+        <p>
+          Myke Towers es un cantante latinoamericano que sacará un álbum el mes
+          que viene. El 24 de enero de 2020, publicó su álbum de estudio debut
+          titulado Easy Money Baby, en honor a su hijo Shawn Torres, que alcanzó
+          el puesto 1 en Top Latin Albums durante 83 semanas consecutivas. El
+          álbum fue nominado para los Grammy Latinos en la categoría de Mejor
+          álbum de música urbana. Con su participación con Wisin en Los
+          Legendarios 001 en la canción «Mi niña», logró el primer lugar en la
+          lista Latin Airplay de Billboard,[cita requerida] a su vez,
+          certificación Platino por la RIAA,[cita requerida] y posteriormente,
+          colaboraron para la remezcla junto a Anitta y Maluma.
+        </p>
+      </article>
     </main>
     <footer>
-            <span>&#169; Adrià de la Fuente</span>
-            <div>
-            <a href="https://www.instagram.com/myketowers/" target="_blank">Instagram</a>
-            <a href="https://www.youtube.com/c/MykeTowers" target="_blank">Youtube</a>
-            <a href="https://twitter.com/MYKETOWERS" target="_blank">Twitter</a>
-            </div>
+      <span>&#169; Adrià de la Fuente</span>
+      <div>
+        <a href="https://www.instagram.com/myketowers/" target="_blank"
+          >Instagram</a
+        >
+        <a href="https://www.youtube.com/c/MykeTowers" target="_blank"
+          >Youtube</a
+        >
+        <a href="https://twitter.com/MYKETOWERS" target="_blank">Twitter</a>
+      </div>
     </footer>
-</body>
-
+  </body>
 </html>
