--- a/web/agenda.html
+++ b/web/agenda.html
@@ -31,7 +31,7 @@
   <main>
     <h2>PRÓXIMOS EVENTOS</h2>
     <section>
-    <table class="col-xs-12 ">
+    <table>
       <tr>
         <th id="c1">Octubre</th>
         <td id="c2">Concierto en Madrid</td>
